<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.dtm.locationsys.fragment.ConfigFragment">
    <!--晶振-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/page_margin_left"
            android:text="@string/config_jingzhen" />

        <EditText
            android:id="@+id/txtJingZhen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/page_margin_right"/>

    </LinearLayout>
    <!--按钮-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
            <Button
                android:id="@+id/btn_search"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/small_btn_h"
                android:background="@color/btn_small_bg_color"
                android:textColor="@color/btn_small_font_color"
                android:text="@string/btn_search"
                android:layout_marginLeft="@dimen/page_margin_left"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btn_set"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/small_btn_h"
                android:background="@color/btn_small_bg_color"
                android:textColor="@color/btn_small_font_color"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/btn_set"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/small_btn_h"
                android:background="@color/btn_small_bg_color"
                android:textColor="@color/btn_small_font_color"
                android:layout_marginRight="@dimen/page_margin_right"
                android:text="@string/btn_save"
                android:layout_weight="1"/>
    </LinearLayout>
    <!-- 分割线 -->
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_big_line_h"
        android:background="@color/divider_line"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="5dp"
        />

    <!--用户管理-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/page_margin_left"
            android:text="@string/config_user__mng_name"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/page_margin_left"
            android:text="@string/config_user_name"/>
        <EditText
            android:id="@+id/txt_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/config_password"/>
        <EditText
            android:id="@+id/txt_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btn_add"
            android:layout_width="60dp"
            android:background="@color/btn_small_bg_color"
            android:textColor="@color/btn_small_font_color"
            android:layout_height="@dimen/small_btn_h"
            android:text="@string/btn_add"/>
        <Button
            android:id="@+id/btn_del"
            android:layout_width="60dp"
            android:background="@color/btn_small_bg_color"
            android:textColor="@color/btn_small_font_color"
            android:layout_height="@dimen/small_btn_h"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="@dimen/page_margin_right"
            android:text="@string/btn_del"/>

    </LinearLayout>
    <!-- 分割线 -->
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_big_line_h"
        android:background="@color/divider_line"
        android:layout_marginBottom="8dp"
        />

    <!--账号密码修改-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/page_margin_left"
            android:text="@string/config_password_edit"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/page_margin_left"
            android:text="@string/config_password_old"/>
        <EditText
            android:id="@+id/txt_password_old"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/config_password_new"/>
        <EditText
            android:id="@+id/txt_password_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="60dp"
            android:layout_height="@dimen/small_btn_h"
            android:background="@color/btn_small_bg_color"
            android:textColor="@color/btn_small_font_color"
            android:layout_marginRight="@dimen/page_margin_right"
            android:text="@string/btn_confirm"/>

    </LinearLayout>
    <!-- 分割线 -->
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_big_line_h"
        android:background="@color/divider_line"
        android:layout_marginBottom="8dp"
        />

    <!--测向时长-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/page_margin_left"
            android:text="@string/config_cexiang_time"/>
        <EditText
            android:id="@+id/txt_direction_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLength="10"/>
        <Button
            android:id="@+id/btn_direction_time"
            android:layout_width="60dp"
            android:layout_height="@dimen/small_btn_h"
            android:background="@color/btn_small_bg_color"
            android:textColor="@color/btn_small_font_color"
            android:layout_marginRight="@dimen/page_margin_right"
            android:text="@string/btn_confirm"/>
    </LinearLayout>
    <!-- 分割线 -->
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_big_line_h"
        android:background="@color/divider_line"
        android:layout_marginBottom="8dp"
        />

    <!--上行增益调整-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/page_margin_left"
            android:text="@string/config_shangxing_control"/>
        <Spinner
            android:id="@+id/spinner_shangxing_control"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/shangxing_control"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/btn_shangxing_control"
            android:layout_width="60dp"
            android:layout_height="@dimen/small_btn_h"
            android:background="@color/btn_small_bg_color"
            android:textColor="@color/btn_small_font_color"
            android:layout_marginRight="@dimen/page_margin_right"
            android:text="@string/btn_confirm"/>
    </LinearLayout>
    <!-- 分割线 -->
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_big_line_h"
        android:background="@color/divider_line"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="5dp"
        />
    <!--读取LOG数据-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/page_margin_left"
            android:layout_weight="1"
            android:text="@string/config_read_log_data"/>
        <Button
            android:id="@+id/btn_read_log_data"
            android:layout_width="110dp"
            android:layout_height="@dimen/small_btn_h"
            android:background="@color/btn_small_bg_color"
            android:textColor="@color/btn_small_font_color"
            android:layout_marginRight="@dimen/page_margin_right"
            android:text="@string/config_read_log_data"/>
    </LinearLayout>
    <!-- 分割线 -->
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/divider_line"
        android:layout_marginTop="5dp"
        />


</LinearLayout>
