<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.dtm.locationsys.fragment.LoginFragment">

    <!--用户名-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/login_margin_left"
            android:text="@string/config_user_name"/>
        <EditText
            android:id="@+id/txt_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/login_margin_right"
            android:layout_weight="1"
            android:maxLength="32"/>

    </LinearLayout>
    <!--密码-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/login_margin_left"
            android:text="@string/config_password"
            android:layout_marginTop="5dp"/>
        <EditText
            android:id="@+id/txt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/login_margin_right"
            android:layout_weight="1"
            android:maxLength="32"/>

    </LinearLayout>
    <!-- 目标号码-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/login_margin_left"
            android:layout_marginTop="5dp"
            android:text="@string/target_num"/>
        <EditText
            android:id="@+id/txt_target_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/login_margin_right"
            android:layout_weight="1"
            android:maxLength="11"/>

    </LinearLayout>

    <!-- 验证码-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/login_margin_left"
            android:layout_marginTop="5dp"
            android:text="@string/verification_code"/>
        <EditText
            android:id="@+id/txt_verification_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/login_margin_right"
            android:layout_weight="1"
            android:maxLength="10"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/big_btn_h"
        android:layout_marginLeft="@dimen/login_margin_left"
        android:layout_marginRight="@dimen/login_margin_right"
        android:layout_marginTop="30dp"
        android:background="@color/btn_bg_color"
        android:textColor="@color/btn_font_color"
        android:text="@string/btn_login"/>

    <Button
        android:visibility="invisible"
        android:id="@+id/btn_tts_test"
        android:layout_width="match_parent"
        android:layout_height="@dimen/big_btn_h"
        android:layout_marginLeft="@dimen/login_margin_left"
        android:layout_marginRight="@dimen/login_margin_right"
        android:layout_marginTop="30dp"
        android:background="@color/btn_bg_color"
        android:textColor="@color/btn_font_color"
        android:text="@string/btn_tts_test"/>




</LinearLayout>
