<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent">
    <!--发-->
    <Switch
        android:id="@+id/list_fa"
        android:layout_width="44dp"
        android:layout_height="@dimen/table_h"
        android:layout_alignBottom="@+id/list_lock"
        android:layout_alignTop="@+id/list_lock"
        android:gravity="center"
        android:textColor="#000"
        android:showText="true"
        android:textOff="@string/fa_off"
        android:textOn="@string/fa_on"
        android:textSize="13sp"/>

    <!--Lock-->
    <Switch
        android:id="@+id/list_lock"
        android:layout_width="44dp"
        android:layout_height="@dimen/table_h"
        android:layout_alignBottom="@+id/list_1_1"
        android:layout_alignTop="@+id/list_1_1"
        android:layout_toRightOf="@+id/list_fa"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:showText="true"
        android:textOff="@string/lock_off"
        android:textOn="@string/lock_on"/>

    <!--TAC/CID/PCI-->
    <com.dtm.locationsys.cust.CustTableTextView
        android:id="@+id/list_1_1"
        android:layout_width="110dp"
        android:layout_height="@dimen/table_h"
        android:layout_alignBottom="@+id/list_1_2"
        android:layout_alignTop="@+id/list_1_2"
        android:layout_toRightOf="@+id/list_lock"
        android:gravity="center"
        android:textColor="#000"
        android:textSize="13sp"
        android:layout_marginLeft="88dp"/>
    <!--CH/BAND-->
    <com.dtm.locationsys.cust.CustTableTextView
        android:id="@+id/list_1_2"
        android:layout_width="70dp"
        android:layout_height="@dimen/table_h"
        android:layout_toRightOf="@+id/list_1_1"
        android:gravity="center"
        android:textColor="#000"
        android:textSize="13sp" />

    <com.dtm.locationsys.cust.CustTableTextView
        android:id="@+id/list_1_3"
        android:layout_width="65dp"
        android:layout_height="@dimen/table_h"
        android:layout_alignBottom="@+id/list_1_2"
        android:layout_alignTop="@+id/list_1_2"
        android:layout_toRightOf="@+id/list_1_2"
        android:gravity="center"
        android:textColor="#000"
        android:textSize="13sp" />

    <com.dtm.locationsys.cust.CustTableTextView
        android:id="@+id/list_1_4"
        android:layout_width="45dp"
        android:layout_height="@dimen/table_h"
        android:layout_alignBottom="@+id/list_1_3"
        android:layout_alignTop="@+id/list_1_3"
        android:layout_toRightOf="@+id/list_1_3"
        android:gravity="center"
        android:textColor="#000"
        android:textSize="13sp" />

    <com.dtm.locationsys.cust.CustTableTextView
        android:id="@+id/list_1_5"
        android:layout_width="50dp"
        android:layout_height="@dimen/table_h"
        android:layout_alignBottom="@+id/list_1_4"
        android:layout_alignTop="@+id/list_1_4"
        android:layout_toRightOf="@+id/list_1_4"
        android:gravity="center"
        android:textColor="#000"
        android:textSize="13sp" />

</RelativeLayout>