<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.dtm.locationsys.fragment.HomeFragment">

        <!--守控小区列表-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <fragment
                android:id="@+id/cellSearchFragment"
                android:name="com.dtm.locationsys.fragment.CellSearchFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <!-- 分割线 -->
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_big_line_h"
            android:background="@color/divider_line"
            android:layout_marginBottom="5dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <!--目标号码-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/target_num" />

            <EditText
                android:id="@+id/txt_target_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:focusable="false"/>
            <!--TMSI-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tmsi_name" />

            <EditText
                android:id="@+id/txt_tmsi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
            <!--TA值-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ta_value" />

            <EditText
                android:id="@+id/txt_ta_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <!-- 分割线 -->
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_big_line_h"
            android:background="@color/divider_line"
            android:layout_marginBottom="5dp"
            />

        <!--Tmsi统计列表-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <fragment
                android:id="@+id/tmsiStatisticsFragment"
                android:name="com.dtm.locationsys.fragment.TmsiStatisticsFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <!-- 分割线 -->
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_big_line_h"
            android:background="@color/divider_line"
            android:layout_marginBottom="5dp"
            />
        <!--测向-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <fragment
                android:id="@+id/detectedUserFragment"
                android:name="com.dtm.locationsys.fragment.DetectedUserFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>


    </LinearLayout>


</ScrollView>
